Library/AXL(Library)/C, C++/AXM.h

// If you want to set specified velocity unit in RPM(Revolution Per Minute),
// ex>    calculate rpm :
// 4500 rpm ?
// When unit/ pulse = 1 : 1, then it becomes pulse per sec, and
// if you want to set at 4500 rpm , then  4500 / 60 sec : 75 revolution / 1sec
// The number of pulse per 1 revolution of motor shall be known. This can be know by detecting of Z phase in Encoder.
// If 1 revolution:1800 pulse,  75 x 1800 = 135000 pulses are required.
// Operate by input Unit = 1, Pulse = 1800 into AxmMotSetMoveUnitPerPulse.
// Caution : If it is controlled with rpm, velocity and acceleration will be changed to rpm unit as well.

// Set the travel distance of specific axis per pulse.
DWORD    __stdcall AxmMotSetMoveUnitPerPulse(long lAxisNo, double dUnit, long lPulse);
//Set move velocity profile mode of specific axis.
//ProfileMode : SYM_TRAPEZOIDE_MODE  '0' - symmetry Trapezode
//              ASYM_TRAPEZOIDE_MODE '1' - asymmetric Trapezode
//              QUASI_S_CURVE_MODE   '2' - symmetry Quasi-S Curve
//              SYM_S_CURVE_MODE     '3' - symmetry S Curve
//              ASYM_S_CURVE_MODE    '4' - asymmetric S Curve
//              SYM_TRAP_M3_SW_MODE  '5' - Symmetry Trapezode : MLIII internal S/W Profile
//              ASYM_TRAP_M3_SW_MODE '6' - Asymmetry Trapezode : MLIII internal S/W Profile
//              SYM_S_M3_SW_MODE     '7' - Symmetry S Curve : MLIII internal S/W Profile
//              ASYM_S_M3_SW_MODE    '8' - Asymmetric S Curve : MLIII internal S/W Profile
DWORD    __stdcall AxmMotSetProfileMode(long lAxisNo, DWORD uProfileMode);
// Return progress rate of origin detection.
// Progress rate can be verified when origin detection is commenced. When origin detection is completed, return 100% whether success or failure. The success or failure of origin detection result can be verified by using GetHome Result API.
// upHomeMainStepNumber : Progress rate of Main Step .
// In case of gentry FALSE upHomeMainStepNumber : When 0 , only selected axis is in proceeding, home progress rate is indicated upHomeStepNumber.
// In case of gentry TRUE upHomeMainStepNumber : When 0, master home is in proceeding, master home progress rate is indicated upHomeStepNumber.
// In case of gentry TRUE upHomeMainStepNumber : When 10 , slave home is in proceeding, master home progress rate is indicated upHomeStepNumber .
// upHomeStepNumber     : Indicate progress rate against to selected axis.
// In case of gentry FALSE  : Indicate progress rate against to selected axis only.
// In case of gentry TRUE, progress rate is indicated by sequence of master axis and slave axis.
DWORD    __stdcall AxmHomeGetRate(long lAxisNo, DWORD *upHomeMainStepNumber, DWORD *upHomeStepNumber);
//========= Position move API ===============================================================================================================

// If you want to set specified velocity unit in RPM(Revolution Per Minute),
// ex>    calculate rpm :
// 4500 rpm ?
// When unit/ pulse = 1 : 1, then it becomes pulse per sec, and
// if you want to set at 4500 rpm , then  4500 / 60 sec : 75 revolution / 1sec
// The number of pulse per 1 revolution of motor shall be known. This can be know by detecting of Z phase in Encoder.
// If 1 revolution:1800 pulse,  75 x 1800 = 135000 pulses are required.
// Operate by input Unit = 1, Pulse = 1800 into AxmMotSetMoveUnitPerPulse.

// Travel up to set distance or position.
// It moves by set velocity and acceleration up to the position set by absolute coordinates/ relative coordinates of specific axis.
// Velocity profile is set in AxmMotSetProfileMode API.
// It separates from API at the timing of pulse output start.
DWORD    __stdcall AxmMoveStartPos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel);
// Travel up to set distance or position.
// It moves by set velocity and acceleration up to the position set by absolute coordinates/ relative coordinates of specific axis.
// Velocity profile is set in AxmMotSetProfileMode API
// It separates from API at the timing of pulse output finish.
DWORD    __stdcall AxmMovePos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel);
// Move by set velocity.
// It maintain velocity mode move by velocity and acceleration  set against to specific axis.
// It separates from API at the timing of pulse output start.
// It moves toward to CW direction when Vel value is positive, CCW when negative.
DWORD    __stdcall AxmMoveVel(long lAxisNo, double dVel, double dAccel, double dDecel);
// It maintain velocity mode move by velocity and acceleration  set against to specific multi-axis.
// It separates from API at the timing of pulse output start.
// It moves toward to CW direction when Vel value is positive, CCW when negative.
DWORD    __stdcall AxmMoveStartMultiVel(long lArraySize, long *lpAxesNo, double *dpVel, double *dpAccel, double *dpDecel);
// Driving set velocity and acceleration rate of specified multi axis.
// Driving speed mode consistently according to SyncMode.
// It separates from API at the timing of pulse output start.
// It moves toward to CW direction when Vel value is positive, CCW when negative.
// dwSyncMode : Disable synchronous stop function(0), Only use syncronous stop function(1), Use Synchronous stop function for alarm(2)
DWORD    __stdcall AxmMoveStartMultiVelEx(long lArraySize, long *lpAxesNo, double *dpVel, double *dpAccel, double *dpDecel, DWORD dwSyncMode);
// Driving in continuous speed mode with set speed and acceleration rate about specified multi axis.
// It separates from API at the timing of pulse output finish. The master axis moves at dVel speed, move at distance ratio of remaining axes.
// Only velocity of lowest axis number is read among corresponding chip.
DWORD    __stdcall AxmMoveStartLineVel(long lArraySize, long *lpAxesNo, double *dpDis, double dVel, double dAccel, double dDecel);
// API which detects Edge of specific Input signal and makes emergency stop or slowdown stop.
// lDetect Signal : Select input signal to detect .
// lDetectSignal  : PosEndLimit(0), NegEndLimit(1), HomeSensor(4), EncodZPhase(5), UniInput02(6), UniInput03(7)
// Signal Edge   : Select edge direction of selected input signal (rising or falling edge).
//                  SIGNAL_DOWN_EDGE(0), SIGNAL_UP_EDGE(1)
// Move direction      : CW when Vel value is positive, CCW when negative.
// SignalMethod  : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
// Caution: When SignalMethod is used as EMERGENCY_STOP(0), acceleration/deceleration is ignored and it is accelerated to specific velocity and emergency stop.
//          lDetectSignal is PosEndLimit , in case of searching NegEndLimit(0,1) active status of signal level is detected.
DWORD    __stdcall AxmMoveSignalSearch(long lAxisNo, double dVel, double dAccel, long lDetectSignal, long lSignalEdge, long lSignalMethod);
// API which detects Edge of specific Input signal and makes move by user-specified value.(MLIII : Sigma-5/7 only)
// dVel           : It moves toward to CW direction when Vel value is positive, CCW when negative.
// dAccel         : Acceleration value
// dDecel         : Deceleration value(Generally, set for 50 times of dAccel value)
// lDetectSignal  : HomeSensor(4)
// dDis           : It is driven relative to the user-specified position based on the detection position of the input signal.
// Notice :
//         - It can be driven in reverse direction when input dDis value in direction opposite to driving direction.
//         - If velocity is fast and dDis value is small, It can be driven in reverse to go to final position when after motor has detect signal and stop.
//         - Home sensor must be set 'LOW' or 'HIGH' before use this API.
DWORD    __stdcall AxmMoveSignalSearchAtDis(long lAxisNo, double dVel, double dAccel, double dDecel, long lDetectSignal, double dDis);
// API which detects signal set in specific axis and travels in order to save the position.
// In case of searching acting API to select and find desired signal, save the position and read the value using AxmGetCapturePos.
// Signal Edge   : Select edge direction of selected input signal. (rising or falling edge).
//                 SIGNAL_DOWN_EDGE(0), SIGNAL_UP_EDGE(1)
// Move direction      : CW when Vel value is positive, CCW when negative.
// SignalMethod  : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
// lDetect Signal: Select input signal to detect edge .SIGNAL_DOWN_EDGE(0), SIGNAL_UP_EDGE(1)
// lDetectSignal : PosEndLimit(0), NegEndLimit(1), HomeSensor(4), EncodZPhase(5), UniInput02(6), UniInput03(7)
// lTarget       : COMMAND(0), ACTUAL(1)
// Caution: When SignalMethod is used as EMERGENCY_STOP(0), acceleration/deceleration is ignored and it is accelerated to specific velocity and emergency stop.
// lDetectSignal is PosEndLimit , in case of searching NegEndLimit(0,1) active status of signal level is detected.
DWORD    __stdcall AxmMoveSignalCapture(long lAxisNo, double dVel, double dAccel, long lDetectSignal, long lSignalEdge, long lTarget, long lSignalMethod);
// API which verifies saved position value in 'AxmMoveSignalCapture' API.
DWORD    __stdcall AxmMoveGetCapturePos(long lAxisNo, double *dpCapPotition);
// API which travels up to set distance or position.
// When execute API, it starts relevant motion action and escapes from API without waiting until motion is completed ”
DWORD    __stdcall AxmMoveStartMultiPos(long lArraySize, long *lpAxisNo, double *dpPos, double *dpVel, double *dpAccel, double *dpDecel);
// Travels up to the distance which sets multi-axis or position.
// It moves by set velocity and acceleration up to the position set by absolute coordinates of specific axis. specific axes.
DWORD    __stdcall AxmMoveMultiPos(long lArraySize, long *lpAxisNo, double *dpPos, double *dpVel, double *dpAccel, double *dpDecel);
// When execute API, it starts open-loop torque motion action of specific axis.(only for MLII, Sigma 5 servo drivers)
// dTroque        : Percentage value(%) of maximum torque. (negative value : CCW, positive value : CW)
// dVel           : Percentage value(%) of maximum velocity.
// dwAccFilterSel : LINEAR_ACCDCEL(0), EXPO_ACCELDCEL(1), SCURVE_ACCELDECEL(2)
// dwGainSel      : GAIN_1ST(0), GAIN_2ND(1)
// dwSpdLoopSel   : PI_LOOP(0), P_LOOP(1)
DWORD    __stdcall AxmMoveStartTorque(long lAxisNo, double dTorque, double dVel, DWORD dwAccFilterSel, DWORD dwGainSel, DWORD dwSpdLoopSel);
// It stops motion during torque motion action.
// it can be only applied for AxmMoveStartTorque API.
DWORD    __stdcall AxmMoveTorqueStop(long lAxisNo, DWORD dwMethod);
// To Move Set Position or distance
// Absolute coordinates / position set to the coordinates relative to the set speed / acceleration rate to drive of specific Axis.
// Velocity Profile is fixed Asymmetric trapezoid.
// Accel/Decel Setting Unit is fixed Unit/Sec^2
// When dAccel is not 0.0 and dDecel is 0.0, it accelerates from the previous speed to the specified speed without deceleration.
// If dAccel is not 0.0 and dDecel is not 0.0, acceleration from the previous speed to the specified speed without deceleration.
// If dAccel is 0.0 and dDecel is not 0.0, acceleration from the previous speed to the specified speed without deceleration.

// The following conditions must be satisfied.
// dVel[1] == dVel[3] must be satisfied.
// dVel [2] that can occur as a constant speed drive range is greater dPosition should be enough.
// Ex) dPosition = 10000;
// dVel[0] = 300., dAccel[0] = 200., dDecel[0] = 0.;    <== Acceleration
// dVel[1] = 500., dAccel[1] = 100., dDecel[1] = 0.;    <== Acceleration
// dVel[2] = 700., dAccel[2] = 200., dDecel[2] = 250.;  <== Acceleration, constant velocity, Deceleration
// dVel[3] = 500., dAccel[3] = 0.,   dDecel[3] = 150.;  <== Deceleration
// dVel[4] = 200., dAccel[4] = 0.,   dDecel[4] = 350.;  <== Deceleration
// Exits API at the point that pulse out starts.
DWORD    __stdcall AxmMoveStartPosWithList(long lAxisNo, double dPosition, double *dpVel, double *dpAccel, double *dpDecel, long lListNum);