Library/AXL(Library)/Visual Basic/AXM.bas


' Return progress rate of origin detection.
' Progress rate can be verified when origin detection is commenced. When origin detection is completed, return 100% whether success or failure. The success or failure of origin detection result can be verified by using GetHome Result API.
' upHomeMainStepNumber : Progress rate of Main Step .
' In case of gentry FALSE upHomeMainStepNumber : When 0 , only selected axis is in proceeding, home progress rate is indicated upHomeStepNumber.
' In case of gentry TRUE upHomeMainStepNumber : When 0, master home is in proceeding, master home progress rate is indicated upHomeStepNumber.
' In case of gentry TRUE upHomeMainStepNumber : When 10 , slave home is in proceeding, master home progress rate is indicated upHomeStepNumber .
' upHomeStepNumber     : Indicate progress rate against to selected axis.
' In case of gentry FALSE  : Indicate progress rate against to selected axis only.
' In case of gentry TRUE, progress rate is indicated by sequence of master axis and slave axis.
Public Declare Function AxmHomeGetRate Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upHomeMainStepNumber As Long, ByRef upHomeStepNumber As Long) As Long




'======= Position move API =================================================================================

' If you want to set specified velocity unit in RPM(Revolution Per Minute),
' ex>    calculate rpm :
' 4500 rpm ?
' When unit/ pulse = 1 : 1, then it becomes pulse per sec, and
' if you want to set at 4500 rpm , then  4500 / 60 sec : 75 revolution / 1sec
' The number of pulse per 1 revolution of motor shall be known. This can be know by detecting of Z phase in Encoder.
' If 1 revolution:1800 pulse,  75 x 1800 = 135000 pulses are required.
' Operate by input Unit = 1, Pulse = 1800 into AxmMotSetMoveUnitPerPulse.

' Travel up to set distance or position.
' It moves by set velocity and acceleration up to the position set by absolute coordinates/ relative coordinates of specific axis.
' Velocity profile is set in AxmMotSetProfileMode API.
' It separates from API at the timing of pulse output start.
Public Declare Function AxmMoveStartPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long


' Travel up to set distance or position.
' It moves by set velocity and acceleration up to the position set by absolute coordinates/ relative coordinates of specific axis.
' Velocity profile is set in AxmMotSetProfileMode API
' It separates from API at the timing of pulse output finish.
Public Declare Function AxmMovePos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long


' Move by set velocity.
' It maintain velocity mode move by velocity and acceleration  set against to specific axis.
' It separates from API at the timing of pulse output start.
' It moves toward to CW direction when Vel value is positive, CCW when negative.
Public Declare Function AxmMoveVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long


' It maintain velocity mode move by velocity and acceleration  set against to specific multi-axis.
' It separates from API at the timing of pulse output start.
' It moves toward to CW direction when Vel value is positive, CCW when negative.
Public Declare Function AxmMoveStartMultiVel Lib "AXL.dll" (ByVal lArraySize As Long, ByRef lpAxesNo As Long, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double) As Long

' Driving set velocity and acceleration rate of specified multi axis.
' Driving speed mode consistently according to SyncMode.
' It separates from API at the timing of pulse output start.
' It moves toward to CW direction when Vel value is positive, CCW when negative.
' dwSyncMode : Disable synchronous stop function(0), Only use syncronous stop function(1), Use Synchronous stop function for alarm(2)
Public Declare Function AxmMoveStartMultiVelEx Lib "AXL.dll" (ByVal lArraySize As Long, ByRef lpAxesNo As Long, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double, ByVal dwSyncMode As Long) As Long


' Driving in continuous speed mode with set speed and acceleration rate about specified multi axis.
' It separates from API at the timing of pulse output finish. The master axis moves at dVel speed, move at distance ratio of remaining axes.
' Only velocity of lowest axis number is read among corresponding chip.
Public Declare Function AxmMoveStartLineVel Lib "AXL.dll" (ByVal lArraySize As Long, ByRef lpAxesNo As Long, ByRef dpDis As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long


' API which detects Edge of specific Input signal and makes emergency stop or slowdown stop.
' lDetect Signal : Select input signal to detect .
' lDetectSignal  : PosEndLimit(0), NegEndLimit(1), HomeSensor(4), EncodZPhase(5), UniInput02(6), UniInput03(7)
' Signal Edge    : Select edge direction of selected input signal (rising or falling edge).
'                  SIGNAL_DOWN_EDGE(0), SIGNAL_UP_EDGE(1)
' Move direction : CW when Vel value is positive, CCW when negative.
' SignalMethod   : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
' Caution: When SignalMethod is used as EMERGENCY_STOP(0), acceleration/deceleration is ignored and it is accelerated to specific velocity and emergency stop.
'          lDetectSignal is PosEndLimit , in case of searching NegEndLimit(0,1) active status of signal level is detected.
Public Declare Function AxmMoveSignalSearch Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal lDetectSignal As Long, ByVal lSignalEdge As Long, ByVal lSignalMethod As Long) As Long


' API which detects Edge of specific Input signal and makes move by user-specified value.(MLIII : Sigma-5/7 only)
' dVel           : It moves toward to CW direction when Vel value is positive, CCW when negative.
' dAccel         : Acceleration value
' dDecel         : Deceleration value(Generally, set for 50 times of dAccel value)
' lDetectSignal  : HomeSensor(4)
' dDis           : It is driven relative to the user-specified position based on the detection position of the input signal.
' Notice :
'         - It can be driven in reverse direction when input dDis value in direction opposite to driving direction.
'        - If velocity is fast and dDis value is small, It can be driven in reverse to go to final position when after motor has detect signal and stop.
'         - Home sensor must be set 'LOW' or 'HIGH' before use this API.
Public Declare Function AxmMoveSignalSearchAtDis Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lDetectSignal As Long, ByVal dDis As Double) As Long


' API which detects signal set in specific axis and travels in order to save the position.
' In case of searching acting API to select and find desired signal, save the position and read the value using AxmGetCapturePos.
' Signal Edge   : Select edge direction of selected input signal. (rising or falling edge).
'                 SIGNAL_DOWN_EDGE(0), SIGNAL_UP_EDGE(1)
' Move direction: CW when Vel value is positive, CCW when negative.
' SignalMethod  : EMERGENCY_STOP(0), SLOWDOWN_STOP(1)
' lDetect Signal: Select input signal to detect edge .SIGNAL_DOWN_EDGE(0), SIGNAL_UP_EDGE(1)
' lDetectSignal : PosEndLimit(0), NegEndLimit(1), HomeSensor(4), EncodZPhase(5), UniInput02(6), UniInput03(7)
' lTarget       : COMMAND(0), ACTUAL(1)
' Caution: When SignalMethod is used as EMERGENCY_STOP(0), acceleration/deceleration is ignored and it is accelerated to specific velocity and emergency stop.
' lDetectSignal is PosEndLimit , in case of searching NegEndLimit(0,1) active status of signal level is detected.
Public Declare Function AxmMoveSignalCapture Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal lDetectSignal As Long, ByVal lSignalEdge As Long, ByVal lTarget As Long, ByVal lSignalMethod As Long) As Long
' API which verifies saved position value in 'AxmMoveSignalCapture' API.
Public Declare Function AxmMoveGetCapturePos Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpCapPotition As Double) As Long


' " API which travels up to set distance or position.
' When execute API, it starts relevant motion action and escapes from API without waiting until motion is completed ”
Public Declare Function AxmMoveStartMultiPos Lib "AXL.dll" (ByVal lArraySize As Long, ByRef lpAxisNo As Long, ByRef dpPos As Double, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double, ByVal uStopMode As Long) As Long


' Travels up to the distance which sets multi-axis or position.
' It moves by set velocity and acceleration up to the position set by absolute coordinates of specific axis. specific axes.
Public Declare Function AxmMoveMultiPos Lib "AXL.dll" (ByVal lArraySize As Long, ByRef lpAxisNo As Long, ByRef dpPos As Double, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double, ByVal uStopMode As Long) As Long



' When execute API, it starts open-loop torque motion action of specific axis.(only for MLII, Sigma 5 servo drivers)
' dTroque        : Percentage value(%) of maximum torque. (negative value : CCW, positive value : CW)
' dVel           : Percentage value(%) of maximum velocity.
' dwAccFilterSel : LINEAR_ACCDCEL(0), EXPO_ACCELDCEL(1), SCURVE_ACCELDECEL(2)
' dwGainSel      : GAIN_1ST(0), GAIN_2ND(1)
' dwSpdLoopSel   : PI_LOOP(0), P_LOOP(1)
'
Public Declare Function AxmMoveStartTorque Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dTorque As Double, ByVal dVel As Double, ByVal dwAccFilterSel As Long, ByVal dwGainSel As Long, ByVal dwSpdLoopSel As Long) As Long


' It stops motion during torque motion action.
' it can be only applied for AxmMoveStartTorque API.
Public Declare Function AxmMoveTorqueStop Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwMethod As Long) As Long



' To Move Set Position or distance
' Absolute coordinates / position set to the coordinates relative to the set speed / acceleration rate to drive of specific Axis.
' Velocity Profile is fixed Asymmetric trapezoid.
' Accel/Decel Setting Unit is fixed Unit/Sec^2
' When dAccel is not 0.0 and dDecel is 0.0, it accelerates from the previous speed to the specified speed without deceleration.
' If dAccel is not 0.0 and dDecel is not 0.0, acceleration from the previous speed to the specified speed without deceleration.
' If dAccel is 0.0 and dDecel is not 0.0, acceleration from the previous speed to the specified speed without deceleration.

' The following conditions must be satisfied.
' dVel[1] == dVel[3] must be satisfied.
' dVel [2] that can occur as a constant speed drive range is greater dPosition should be enough.
' Ex) dPosition = 10000;
' dVel[0] = 300., dAccel[0] = 200., dDecel[0] = 0.;    <== Acceleration
' dVel[1] = 500., dAccel[1] = 100., dDecel[1] = 0.;    <== Acceleration
' dVel[2] = 700., dAccel[2] = 200., dDecel[2] = 250.;  <== Acceleration, constant velocity, Deceleration
' dVel[3] = 500., dAccel[3] = 0.,   dDecel[3] = 150.;  <== Deceleration
' dVel[4] = 200., dAccel[4] = 0.,   dDecel[4] = 350.;  <== Deceleration
' Exits API at the point that pulse out starts.
Public Declare Function AxmMoveStartPosWithList Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPosition As Double, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double, ByVal lListNum As Long) As Long


